<resources>
    <string name="app_name">s181142</string>
    <string name="title_activity_hangman">HangmanActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="rules">Rules</string>
    <string name="movies">Movies</string>
    <string name="geeky">Geeky</string>
    <string name="music">Music</string>
    <string name="language">Change Language</string>
    <string name="exit">Exit</string>
    <string name="hangman">Hangman</string>
    <string name="loss">Loss: </string>
    <string name="wins">Wins: </string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="chalkHeadFont">fonts/chalkHead.ttf</string>
    <string name="chalkLetteFont">fonts/chalkLetter.ttf</string>
    <string name="hangman_activity_mCurrentGuessedWord">mCurrentGuessedWord</string>
    <string name="hangman_activity_mWrongLetterString">mWrongLetterString</string>
    <string name="hangman_activity_mAttempts">mAttempts</string>
    <string name="hangman_activity_mCorrectGussedButton">mCorrectGussedButton</string>
    <string name="hangman_activity_mIncorrectGussedButton">mIncorrectGussedButton</string>
    <string name="hangman_activity_no">no</string>
    <string name="hangman_activity_mGuessWord">mGuessWord</string>
    <string name="hangman_activity_mWrongGuessesLetterList">mWrongGuessesLetterList</string>
    <string name="hangman_activity_mGuessedIndexes">mGuessedIndexes</string>
    <string name="hangman_activity_mHiddenword">mHiddenword</string>
    <string name="backpressed_dialog_cancel">Cancel?</string>
    <string name="backpressed_dialog_message">Do you want to quit this game session and go to menu?</string>
    <string name="backpressed_dialog_positive">Yes</string>
    <string name="backpressed_dialog_negative">No</string>
    <string name="reset_dialog_title">No more questions!</string>
    <string name="reset_dialog_message">Do you want to start over?</string>
    <string name="reset_dialog_positive">Yes</string>
    <string name="reset_dialog_negative">No</string>
    <string name="win_dialog_title">You guess is correct!</string>
    <string name="win_dialog_message">Congratulations!</string>
    <string name="win_dialog_positive">Continue!</string>
    <string name="lost_dialog_title">You lost!</string>
    <string name="lost_dialog_message">"The word was "</string>
    <string name="lost_dialog_positive">Continue</string>
    <string name="language_code_en">EN</string>
    <string name="language_code_no">NO</string>
    <string name="language_dialog_title">Change Language</string>
    <string name="language_dialog_positive">Continue</string>
    <string name="language_code_en_lowercase">en</string>
    <string name="language_code_no_lowercase">no</string>
    <string name="category_activity_category">Choose Category</string>
    <string name="rules_text">You must guess the word game have thought about. \n\nYou can see how many letters the word contains by counting on the underscores . \n\nWhen you select a correct letter it will appear on the screen in green color. Incorrect letter will be displayed in red color \n\nWhen you choose the wrong letter a straw man will be drawn up and after six tries whole straw man will be drawn and hanged and then you will lose \n\nBefore start you will select which type of words you want the game thinking by choosing a category you think is most fun \n\nPlay as much as you want, but note that this game does not contain very many questions and after you have gone through all the questions in a category can restart the game session</string>
    <string name="activity_rules_headline">Rules</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_g">G</string>
    <string name="button_h">H</string>
    <string name="button_i">I</string>
    <string name="button_j">J</string>
    <string name="button_k">K</string>
    <string name="button_l">L</string>
    <string name="button_m">M</string>
    <string name="button_n">N</string>
    <string name="button_o">O</string>
    <string name="button_p">P</string>
    <string name="button_q">Q</string>
    <string name="button_r">R</string>
    <string name="button_s">S</string>
    <string name="button_t">T</string>
    <string name="button_u">U</string>
    <string name="button_v">V</string>
    <string name="button_w">W</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="button_æ">Æ</string>
    <string name="button_ø">Ø</string>
    <string name="button_å">Å</string>
    <string name="start_hangman">Start Hangman</string>
</resources>
