
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/hangman_background"
                tools:context=".MainActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/linearLayout"
    android:layout_centerVertical="true"
    android:layout_alignStart="@+id/headline_textview">

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:minHeight="35dp"
        android:minWidth="150dp"
        android:textColor="#ffffff"
        android:text="Start Hangman       "
        android:id="@+id/start_game_textview"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="startGame"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:minWidth="150dp"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:text="@string/rules"
        android:id="@+id/rules_textview"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:minHeight="35dp"
        android:minWidth="150dp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:id="@+id/language_textview"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:minHeight="35dp"
        android:minWidth="150dp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:id="@+id/exit_textview"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:text="@string/loss"
        android:id="@+id/loss_textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00ff00"
        android:textSize="20sp"
        android:text="@string/wins"
        android:id="@+id/wins_textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:paddingBottom="30dp"
        android:text="@string/hangman"
        android:id="@+id/headline_textview"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
